--- a/web/templates/cart/view.html
+++ b/web/templates/cart/view.html
@@ -26,6 +26,7 @@
                         <td>{{ "%.2f"|format(item.total) }} €</td>
                         <td>
                             <form action="{{ url_for('cart.remove', product_id=item.product.id) }}" method="post" style="display:inline;">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <button type="submit" class="btn btn-sm btn-outline-danger">Supprimer</button>
                             </form>
                         </td>
