--- a/web/templates/partials/navbar.html
+++ b/web/templates/partials/navbar.html
@@ -17,6 +17,9 @@
 
       <ul class="navbar-nav mb-2 mb-lg-0">
         {% if current_user.is_authenticated %}
+          {% if current_user.is_admin %}
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.dashboard') }}">Admin</a></li>
+          {% endif %}
           <li class="nav-item"><a class="nav-link" href="{{ url_for('user.account') }}">{{ current_user.email }}</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('cart.view') }}">Panier <span class="badge bg-primary" id="cart-count">{{ cart_count or 0 }}</span></a></li>
           {% else %}
